--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "web-vitals": "^2.1.3",
     "axios": "^0.24.0",
     "react-hook-form": "^7.24.0",
-    "joi": "^17.5.0"
+    "joi": "^17.5.0",
+    "@hookform/resolvers": "^2.8.5"
   },
   "scripts": {
     "start": "react-scripts start",
