--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "axios": "^0.25.0",
     "react-redux": "^7.2.6",
     "@reduxjs/toolkit": "^1.7.1",
-    "react-hook-form": "^7.25.3"
+    "react-hook-form": "^7.25.3",
+    "joi": "^17.6.0",
+    "@hookform/resolvers": "^2.8.8"
   },
   "scripts": {
     "start": "react-scripts start",
