--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "react-redux": "^7.2.6",
+    "@reduxjs/toolkit": "^1.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
